client/assets/styles/scss/layout/instance-sidebar.scss
.instance-sidebar {
  overflow-y: auto;
  min-width: 300px;

  // empty states for sections
  .well {
    color: $gray;
    line-height: 1.4;
    margin: 0 0 15px;
    padding: 6px 9px;
  }

  // override button and fancy-select styles
  .btn-group-vertical {
    display: block;
    overflow: hidden;

    .btn {
      text-align: left;
    }
  }

  .btn-repository {
    border-radius: $input-border-radius;
    color: $gray;
    font-size: 15px;
    font-weight: $weight-normal;
    height: auto;
    line-height: 1.4;
    padding: 6px 30px 6px 9px;

    &:hover,
    &:active {
      z-index: 1; // on top of second button

      .row-commit::after {
        background: $white;
        box-shadow: -3px 0px 0 3px rgba($white,.5);
      }
    }

    // icon for commmit/branch
    .row {
      padding-left: 21px;
      position: relative;

      .iconnables {
        height: 15px;
        left: 0;
        margin: 3px 6px 0 0 ;
        position: absolute;
        width: 15px;
      }
    }

    .row-commit {
      max-height: 42px; // 2 rows
      overflow: hidden;
      white-space: normal;

      &::after {
        background: $gray-lighterest;
        box-shadow: -3px 0px 0 3px rgba($gray-lighterest,.5);
        bottom: 3px;
        content: '…';
        display: block;
        position: absolute;
        right: 0;
      }
    }
  }

  .btn-sync {
    background: $gray-lightest;
    border: 2px solid $gray-lighter;
    border-top-width: 1px;
    color: $gray;
    cursor: default;
    font-size: 13px;
    padding: 0 9px;

    .icons-sync {
      height: 100%;
      margin-right: 6px;
      width: 15px;
    }

    .underline {
      line-height: 1.2;
      margin-top: 8px;
    }

    .toggle-wrapper {
      top: 9px;

      &.disabled {
        cursor: not-allowed;
        opacity: .5;
      }
    }
  }

  .icons-arrow-forward {
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
  }
}

.sidebar-section {
  margin: 0 12px;

  + .sidebar-section {
    border-top: 1px solid $gray-lighter;
  }
}

.explorer-section {

  .sidebar-section-content {
    padding-bottom: 12px;
  }

  .file-tree {
    margin: 0;
  }
}

.sidebar-section-heading {
  color: $gray-darker;
  line-height: 54px;
  position: relative;

  // for add buttons next to section headings, like in File Explorer
  .btn {
    height: 54px;
    transition: opacity .15s ease-in-out;

    &.ng-hide {
      opacity: 0;
    }

    .iconnables {
      width: 24px;
    }
  }
}

.sidebar-section-item {
  margin-bottom: 12px;
  position: relative;

  &:last-child {
    margin-bottom: 18px;
  }
}

